--- a/CSharpOOP.csproj
+++ b/CSharpOOP.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Calculator.cs" />
+    <Compile Include="ConstructorAndDestructor.cs" />
     <Compile Include="Properties.cs" />
     <Compile Include="StaticMembers.cs" />
     <Compile Include="Program.cs" />
