--- a/CSharpOOP.csproj
+++ b/CSharpOOP.csproj
@@ -43,9 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbstractClass.cs" />
     <Compile Include="Calculator.cs" />
+    <Compile Include="Composition.cs" />
     <Compile Include="ConstructorAndDestructor.cs" />
     <Compile Include="Inheritance.cs" />
+    <Compile Include="Interface.cs" />
+    <Compile Include="NestedClass.cs" />
     <Compile Include="Properties.cs" />
     <Compile Include="StaticMembers.cs" />
     <Compile Include="Program.cs" />
