Add ClassLibrary, DotNETClassLibrary.cs

--- a/ClassLibrary/ClassLibrary.csproj
+++ b/ClassLibrary/ClassLibrary.csproj
@@ -4,17 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AAFCF75B-7C1B-4DF9-A17B-3F28A17F70BA}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>CSharpOOP</RootNamespace>
-    <AssemblyName>CSharpOOP</AssemblyName>
+    <ProjectGuid>{BBF59057-DC18-42E0-AB17-CFDDB290FDCA}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>ClassLibrary</RootNamespace>
+    <AssemblyName>ClassLibrary</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +23,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -43,31 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AbstractClass.cs" />
-    <Compile Include="Calculator.cs" />
-    <Compile Include="Composition.cs" />
-    <Compile Include="ConstructorAndDestructor.cs" />
-    <Compile Include="DotNETClassLibrary.cs" />
-    <Compile Include="Inheritance.cs" />
-    <Compile Include="Interface.cs" />
-    <Compile Include="NestedClass.cs" />
-    <Compile Include="PartialClass2.cs" />
-    <Compile Include="Properties.cs" />
-    <Compile Include="PartialClass1.cs" />
-    <Compile Include="PartialClassAndPartialMethod.cs" />
-    <Compile Include="SealedClassAndSealedMethod.cs" />
-    <Compile Include="StaticMembers.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="clsMath.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="ClassLibrary\ClassLibrary.csproj">
-      <Project>{bbf59057-dc18-42e0-ab17-cfddb290fdca}</Project>
-      <Name>ClassLibrary</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
